# ComputationalMathematics

./: CMakeLists.txt
py/BDF4/: err.txt  err2.txt  main.py
py/Integration/: errN3.txt  errN5.txt  main.py
py/IntegrationRunge/: errN3.txt  main.py
py/Interpolant/: errBaseN3.txt  errBaseN4.txt  errBaseN5.txt  errChebBaseN3.txt  errChebBaseN4.txt  errChebBaseN5.txt  errSecondBaseN3.txt  errSecondBaseN4.txt  errSecondBaseN5.txt  main.py
py/InterpolantHermit/: errBaseN3.txt  errBaseN4.txt  errBaseN5.txt  main.py
py/KeplerSolver/: errBase_0_1.txt  errBase_0_2.txt  errBase_0_5.txt  errBase_0_8.txt  main.py
py/NumDiff/: err.txt  errAdvanced.txt  errSecond.txt  main.py
py/RK4/: DPmain.py  coordsSuperTask1.txt  coordsSuperTaskI30.txt  coordsSuperTaskI30NotCirc.txt  coordsSuperTaskLMov.txt  coordsSuperTaskLMovNotCirc.txt  err.txt  err2.txt  errDP.txt  main.py  superTask.py
py/Spline/: err.txt  err2.txt  errCos.txt  main.py
py/SplineReal/: err.txt  main.py
specific_tasks/: CMakeLists.txt  keplerSolver.cpp
src/: BDF4.hpp  CMakeLists.txt  DPRK4.hpp  DPRK7(8).hpp  Integration.hpp  IntegrationRunge.hpp  Interpolant.hpp  InterpolantHermit.hpp  MPI.hpp  Matrix.hpp  NumDiff.hpp  RK4.hpp  SlaeSolvers.hpp  Spline.hpp  SplineReal.hpp
tests/: BackDifferentiationTests.cpp  CMakeLists.txt  IntegrationRungeTests.cpp  IntegrationTests.cpp  InterpolantHermitTests.cpp  InterpolantTests.cpp  KeplerSolverTestsST.cpp  MPITests.cpp  MatrixSolversTests.cpp  NumDiffTest.cpp  RungeKuttaTests.cpp  SplineRealTests.cpp  SplineTests.cpp
